-Script <file> - it now actually works. Tentative support for nested migrations added. Enables multi migration support.

--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataBossConfiguration.cs" />
+    <Compile Include="DataBossDirectoryMigration.cs" />
     <Compile Include="DataBossMigrator.cs" />
+    <Compile Include="DataBossSqlMigrationScope.cs" />
     <Compile Include="DataBossTextMigration.cs" />
     <Compile Include="MissingLinqExtensions.cs" />
     <Compile Include="Program.cs" />
