--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,6 +57,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Version.cs" />
+    <Compile Include="Schema\DataBossHistory.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Usage.txt">
