--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DataBossSpec.cs" />
     <Compile Include="DataBossTextMigrationSpec.cs" />
     <Compile Include="PowerArgsSpec.cs" />
+    <Compile Include="StubAttributeProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataBoss\DataBoss.csproj">
