--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -56,6 +56,7 @@
     <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="IDataBossMigration.cs" />
     <Compile Include="MissingLinqExtensions.cs" />
+    <Compile Include="MissinqLinq.cs" />
     <Compile Include="PowerArgs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
