--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DataBossScripterSpec.cs" />
     <Compile Include="DataBossSpec.cs" />
     <Compile Include="DataBossTextMigrationSpec.cs" />
+    <Compile Include="ObjectReaderSpec.cs" />
     <Compile Include="PowerArgsSpec.cs" />
     <Compile Include="StubAttributeProvider.cs" />
   </ItemGroup>
