--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -51,10 +51,12 @@
     <Compile Include="DataBossMigrationPath.cs" />
     <Compile Include="DataBossMigrator.cs" />
     <Compile Include="DataBossScripter.cs" />
+    <Compile Include="DataBossScriptMigrationScope.cs" />
     <Compile Include="DataBossSqlMigrationScope.cs" />
     <Compile Include="DataBossTextMigration.cs" />
     <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="IDataBossMigration.cs" />
+    <Compile Include="IDataBossMigrationScope.cs" />
     <Compile Include="MissingLinqExtensions.cs" />
     <Compile Include="MissinqLinq.cs" />
     <Compile Include="ObjectReader.cs" />
