--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DataBossScriptMigrationScope.cs" />
     <Compile Include="DataBossSqlMigrationScope.cs" />
     <Compile Include="DataBossTextMigration.cs" />
+    <Compile Include="Data\FieldMapping.cs" />
     <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="IDataBossLog.cs" />
     <Compile Include="IDataBossMigration.cs" />
