--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DataBossScriptMigrationScope.cs" />
     <Compile Include="DataBossSqlMigrationScope.cs" />
     <Compile Include="DataBossTextMigration.cs" />
+    <Compile Include="DataGrid.cs" />
     <Compile Include="Data\FieldMapping.cs" />
     <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="IDataBossLog.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="MissingLinqExtensions.cs" />
     <Compile Include="MissinqLinq.cs" />
     <Compile Include="ObjectReader.cs" />
+    <Compile Include="ObjectVisualizer.cs" />
     <Compile Include="PowerArgs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
