--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -73,7 +73,9 @@
     <Compile Include="Schema\ClusteredAttribute.cs" />
     <Compile Include="Schema\DataBossHistory.cs" />
     <Compile Include="Data\SequenceDataReader.cs" />
+    <Compile Include="SqlConnectionExtensions.cs" />
     <Compile Include="SqlServer\SysObjects.cs" />
+    <Compile Include="ToParams.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Usage.txt">
