MaxDepth for output and more reasonable handling of DateTime.

--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -59,6 +59,7 @@
     <Compile Include="DataGrid.cs" />
     <Compile Include="Data\DbObjectReader.cs" />
     <Compile Include="Data\FieldMapping.cs" />
+    <Compile Include="DictionaryExtensions.cs" />
     <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="IDataBossLog.cs" />
     <Compile Include="IDataBossMigration.cs" />
