--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataBossConfigurationSpec.cs" />
+    <Compile Include="DataBossDirectoryMigrationSpec.cs" />
     <Compile Include="DataBossMappingSource.cs" />
     <Compile Include="DataBossMigratorSpec.cs" />
     <Compile Include="DataBossScripterSpec.cs" />
