--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -30,9 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Cone, Version=2015.5.6.1, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Cone, Version=2016.8.11.2, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Cone\Build\Cone.dll</HintPath>
+      <HintPath>..\Tools\Cone-2016.8.11.2\Bin\Cone.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -56,6 +56,7 @@
     <Compile Include="ObjectReaderSpec.cs" />
     <Compile Include="ObjectVisualizerSpec.cs" />
     <Compile Include="PowerArgsSpec.cs" />
+    <Compile Include="SimpleDataReader.cs" />
     <Compile Include="StubAttributeProvider.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -66,9 +67,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
