--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CustomAttributeProviderExtensions.cs" />
     <Compile Include="DataBossCommandAttribute.cs" />
+    <Compile Include="Diagnostics\SqlServerMaintenancePlanWizard.cs" />
     <Compile Include="Migrations\DataBossCompositeMigration.cs" />
     <Compile Include="DataBossConfiguration.cs" />
     <Compile Include="DataBossConsoleLog.cs" />
