Testing/DatabaseSetup added.

--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -59,6 +59,7 @@
     <Compile Include="PowerArgsSpec.cs" />
     <Compile Include="SimpleDataReader.cs" />
     <Compile Include="StubAttributeProvider.cs" />
+    <Compile Include="Testing\DatabaseSetupSpec.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataBoss\DataBoss.csproj">
