--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomAttributeProviderExtensions.cs" />
+    <Compile Include="DataBoss.cs" />
     <Compile Include="DataBossCommandAttribute.cs" />
     <Compile Include="Diagnostics\SqlServerMaintenancePlanWizard.cs" />
     <Compile Include="Migrations\DataBossCompositeMigration.cs" />
