--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -60,6 +60,7 @@
     <Compile Include="SimpleDataReader.cs" />
     <Compile Include="StubAttributeProvider.cs" />
     <Compile Include="Testing\DatabaseSetupSpec.cs" />
+    <Compile Include="ToParamsSpec.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataBoss\DataBoss.csproj">
