bulk insert and retreive id's.

--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ObjectVisualizerSpec.cs" />
     <Compile Include="PowerArgsSpec.cs" />
     <Compile Include="SimpleDataReader.cs" />
+    <Compile Include="SqlConnectionExtensionsSpec.cs" />
     <Compile Include="StubAttributeProvider.cs" />
     <Compile Include="Testing\DatabaseSetupSpec.cs" />
     <Compile Include="ToParamsSpec.cs" />
