--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DataBossSpec.cs" />
     <Compile Include="DataBossQueryMigrationSpec.cs" />
     <Compile Include="Data\DbObjectReaderSpec.cs" />
+    <Compile Include="Data\FieldMappingSpec.cs" />
     <Compile Include="Data\SequenceDataReaderSpec.cs" />
     <Compile Include="ObjectReaderSpec.cs" />
     <Compile Include="ObjectVisualizerSpec.cs" />
