--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -30,11 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Cone, Version=2017.8.7.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\DataBoss\packages\Cone.2017.8.7.1\lib\net45\Cone.dll</HintPath>
+    <Reference Include="Cone, Version=2017.8.27.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\DataBoss\packages\Cone.2017.8.27.1\lib\net45\Cone.dll</HintPath>
     </Reference>
     <Reference Include="Cone.Expectations, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\DataBoss\packages\Cone.2017.8.7.1\lib\net45\Cone.Expectations.dll</HintPath>
+      <HintPath>..\DataBoss\packages\Cone.2017.8.27.1\lib\net45\Cone.Expectations.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
