--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataBossConfigurationSpec.cs" />
+    <Compile Include="DataBossConnectionProviderSpec.cs" />
     <Compile Include="DataBossDbTypeSpec.cs" />
     <Compile Include="DataBossDirectoryMigrationSpec.cs" />
     <Compile Include="DataBossMappingSource.cs" />
