DataBoss.Linq is now a thing. First out. ChunkBy.

--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Data\DbObjectReaderSpec.cs" />
     <Compile Include="Data\FieldMappingSpec.cs" />
     <Compile Include="Data\SequenceDataReaderSpec.cs" />
+    <Compile Include="Linq\MissingLinqSpec.cs" />
     <Compile Include="ObjectReaderSpec.cs" />
     <Compile Include="ObjectVisualizerSpec.cs" />
     <Compile Include="PowerArgsSpec.cs" />
