--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -79,6 +79,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DataBoss.Data\DataBoss.Data.csproj">
+      <Project>{4762c02c-a4cd-4c1c-8eca-bc58034c6042}</Project>
+      <Name>DataBoss.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DataBoss\DataBoss.csproj">
       <Project>{c698683c-1c33-46fe-bda9-54b54144a7ce}</Project>
       <Name>DataBoss</Name>
