--- a/DataBoss.Data/DataBoss.Data.csproj
+++ b/DataBoss.Data/DataBoss.Data.csproj
@@ -6,4 +6,10 @@
     <IntermediateOutputPath>$(SolutionDir)..\Build\obj\$(MSBuildProjectName)</IntermediateOutputPath>
   </PropertyGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="System.Data.SqlClient">
+      <Version>4.4.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
